# nature-of-nature

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
docs/: phase4-issue1-update.md  phase4-issues.sh  phase4-plan.md
presets/: boids_worm.txt  physarum_bacteria.txt  termites_spreading.txt
shaders/: boids.wgsl  compositor.wgsl  fullscreen_quad.wgsl  game_of_life.wgsl  physarum.wgsl  post_effects.wgsl  termites.wgsl  upscale.wgsl
src/: compositor.cpp  compositor.h  compute_pass.cpp  compute_pass.h  export.cpp  export.h  gpu_context.cpp  gpu_context.h  main.cpp  post_effects.cpp  post_effects.h  preset.h  render_pass.cpp  render_pass.h  simulation.h  ui.cpp  ui.h
src/algorithms/: boids.cpp  boids.h  game_of_life.cpp  game_of_life.h  physarum.cpp  physarum.h  termites.cpp  termites.h
